--- a/project-1/index.html
+++ b/project-1/index.html
@@ -7,6 +7,33 @@
     <title>PokeTunes</title>
 </head>
 <body>
+    <section id="start-screen" class="center">
+        <h2>PokeTunes</h2>
+        <p>Press the button below to find out your perfect Pokemon team</p>
+        <button>Start</button>
+    </section>
+
+    <h3>Are you more laid back or active?</h3>
+    <button>Active</button>
+    <button>Laidback</button>
+
+    <h3>Are you more laid back or active?</h3>
+    <button>Active</button>
+    <button>Laidback</button>
+
+    <h3>Are you more laid back or active?</h3>
+    <button>Active</button>
+    <button>Laidback</button>
+
+    <h3>Are you more laid back or active?</h3>
+    <button>Active</button>
+    <button>Laidback</button>
+
+    <h3>Are you more laid back or active?</h3>
+    <button>Active</button>
+    <button>Laidback</button>
+
+
     
 </body>
 </html>
