--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <section id="start-screen" class = "center">
+        <h2>PokeTunes</h2>
+        <p>Press the button below to find out your perfect Pokemon Team</p>
+        <button>Start</button>
+    </section>    
 
     <h3>Are you more laid back or active?</h3>
     <button>Active</button>
@@ -28,7 +33,36 @@
     <button>Active</button>
     <button>Laid Back</button>
    
+    <section id="results">
+        <!-- background image -->
+        <h3>Your Pokemon Team</h3>
+        <div>
+            <!-- img/pokemon sprite api -->
+            <p class = "pokemon-name"></p>
+        </div>
+        <div>
+            <!-- img/pokemon sprite api -->
+            <p class = "pokemon-name"></p>
+        </div>
+        <div>
+            <!-- img/pokemon sprite api -->
+            <p class = "pokemon-name"></p>
+        </div>
+        <div>
+            <!-- img/pokemon sprite api -->
+            <p class = "pokemon-name"></p>
+        </div>
+        <div>
+            <!-- img/pokemon sprite api -->
+            <p class = "pokemon-name"></p>
+        </div>
+        <div>
+            <!-- img/pokemon sprite api -->
+            <p class = "pokemon-name"></p>
+        </div>
+    </section>
 
+    <footer>music player placeholder</footer>
 
 
 </body>
