--- a/test/test.html
+++ b/test/test.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <section id="start-screen">
+    <section id="start-screen" class = "center">
         <h2>PokeTunes</h2>
         <p>Press the button below to find out your perfect Pokemon Team</p>
         <button>Start</button>
