updating html with results and home page

--- a/index.html
+++ b/index.html
@@ -12,23 +12,30 @@
         <p>Press the button below to find out your perfect Pokemon Team</p>
         <button>Start</button>
     </section>    
+    <section>
+        <h3>Are you more laid back or active?</h3>
+        <button>Active</button>
+        <button>Laid Back</button>
 
-    <h3>Are you more laid back or active?</h3>
-    <button>Active</button>
-    <button>Laid Back</button>
-
-    <h3>Do you prefer ballet or football?</h3>
-    <button>Ballet</button>
-    <button>Football</button>
-
-    <h3>Are you more laid back or active?</h3>
-    <button>Active</button>
-    <button>Laid Back</button>
+        <h3>Do you prefer ballet or football?</h3>
+        <button>Ballet</button>
+        <button>Football</button>
     
-    <h3>Are you more laid back or active?</h3>
-    <button>Active</button>
-    <button>Laid Back</button>
-   
+        <h3>Do you like warm or cold?</h3>
+        <button>Warm</button>
+        <button>Cold</button>
+
+        <h3>Do you prefer the beach, space, mountains or the clouds?</h3>
+        <button>Beach</button>
+        <button>Space</button>
+        <button>Mountains</button>
+        <button>Clouds</button>
+
+        <h3>do you prefer action movies or drama movies?</h3>
+        <button>Action moves</button>
+        <button>Drama Movies</button>
+    </section>
+
     <section id="results">
         <!-- background image -->
         <h3>Your Pokemon Team</h3>
@@ -59,19 +66,6 @@
     </section>
 
     <footer>music player placeholder</footer>
-    <h3>Do you like warm or cold?</h3>
-    <button>Warm</button>
-    <button>Cold</button>
-
-    <h3>Do you prefer the beach, space, mountains or the clouds?</h3>
-    <button>Beach</button>
-    <button>Space</button>
-    <button>Mountains</button>
-    <button>Clouds</button>
-
-    <h3>do you prefer action movies or drama movies?</h3>
-    <button>Action moves</button>
-    <button>Drama Movies</button>
 
 </body>
 </html>
