pushing fetch js

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </section>
 
     <footer>music player placeholder</footer>
+    <script src="./development/javascript.js"></script>
 
 </body>
 </html>
