--- a/index.html
+++ b/index.html
@@ -37,40 +37,44 @@
         <button class="cold" onclick="pokemonRandom()">Clouds</button>
 
         <h3>do you prefer action movies or drama movies?</h3>
-        <button class="tough" onclick="pokemonRandom()">Action moves</button>
-        <button class="flex" onclick="pokemonRandom()">Drama Movies</button>
+        <button class="tough" onclick="pokemonRandom();getGif();getSprites()">Action moves</button>
+        <button class="flex" onclick="pokemonRandom();getGif();getSprites()">Drama Movies</button>
     </section>
 
     <section id="results" class=" center">
         <!-- background image -->
         <h3>Your Pokemon Team</h3>
         <div>
-            <!-- img/pokemon sprite api -->
+            <img src="" alt="" class="first-poke">
             <p class = "pokemon-name"></p>
         </div>
         <div>
-            <!-- img/pokemon sprite api -->
+            <img src="" alt="" class="second-poke">
             <p class = "pokemon-name"></p>
         </div>
         <div>
-            <!-- img/pokemon sprite api -->
+            <img src="" alt="" class="third-poke">
             <p class = "pokemon-name"></p>
         </div>
         <div>
-            <!-- img/pokemon sprite api -->
+            <img src="" alt="" class="fourth-poke">
             <p class = "pokemon-name"></p>
         </div>
         <div>
-            <!-- img/pokemon sprite api -->
+            <img src="" alt="" class="fifth-poke">
             <p class = "pokemon-name"></p>
         </div>
         <div>
-            <!-- img/pokemon sprite api -->
+            <img src="" alt="" class="sixth-poke">
             <p class = "pokemon-name"></p>
         </div>
     </section>
 
-    <footer>music player placeholder</footer>
+    <footer>
+        <div class="insert-gif">
+            <img src="" alt="" class="moving-gif">
+        </div>
+    </footer>
     <script src="./development/javascript.js"></script>
 
 </body>
