fixed undefined and recursive functions and updated josh's code

--- a/index.html
+++ b/index.html
@@ -37,13 +37,8 @@
         <button class="cold" onclick="pokemonCold()">Clouds</button>
 
         <h3>do you prefer action movies or drama movies?</h3>
-<<<<<<< HEAD
-        <button class="tough" onclick="pokemonTough()">Action moves</button>
-        <button class="flex" onclick="pokemonFlex()">Drama Movies</button>
-=======
-        <button class="tough" onclick="pokemonRandom();getGif();getSprites()">Action moves</button>
-        <button class="flex" onclick="pokemonRandom();getGif();getSprites()">Drama Movies</button>
->>>>>>> 1ee89b02380503ea166aa98711f71964ae3a2e66
+        <button class="tough" onclick="pokemonTough();getGif();getSprites()">Action moves</button>
+        <button class="flex" onclick="pokemonFlex();getGif();getSprites()">Drama Movies</button>
     </section>
 
     <section id="results" class=" center">
