--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="cold" onclick="pokemonRandom()">Clouds</button>
 
         <h3>do you prefer action movies or drama movies?</h3>
-        <button class="tough" onclick="pokemonRandom();getGif();getSprites()">Action moves</button>
+        <button class="tough" onclick="pokemonRandom();getGif();getSprites()">Action Movies</button>
         <button class="flex" onclick="pokemonRandom();getGif();getSprites()">Drama Movies</button>
     </section>
 
