--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./development/style.css">
 </head>
-<body>
+<body id="bodybackground">
     <section id="start-screen" class ="center">
-        <h2>PokeTunes</h2>
+        <h2><img src="./assets/poketeams logo.png" alt="PokeTeams logo"></h2>
         <p>Press the button below to find out your perfect Pokemon Team</p>
         <button class="start-button">Start</button>
     </section>    
