--- a/index.html
+++ b/index.html
@@ -11,30 +11,34 @@
 </head>
 <body id="bodybackground">
     <section id="start-screen" class ="center">
-        <h2><img src="./assets/poketeams logo.png" alt="PokeTeams logo"></h2>
-        <p>Press the button below to find out your perfect Pokemon Team</p>
-        <button class="start-button">Start</button>
+        <div class="start-section">
+            <div class="vertical-center">
+                <h2><img src="./assets/poketeams logo.png" alt="PokeTeams logo"></h2>
+                <h1>Press "Start" for your Pokemon Dream Team!</h1>
+                <button class="start-button">Start</button>
+            </div>
+        </div>
     </section>    
     
     <section id="quiz-screen" class="center">
         <div class="quiz-questions hide">
-            <h3>Are you more laid back or active?</h3>
+            <h2>Are you more laid back or active?</h2>
             <button class="tough" onclick="pokemonTough();">Active</button>
             <button class="flex" onclick="pokemonFlex();">Laid Back</button>
         </div>
         <div class="quiz-questions hide">
-            <h3>Do you prefer ballet or football?</h3>
+            <h2>Would you rather watch ballet or football?</h2>
             <button class="flex" onclick="pokemonFlex()">Ballet</button>
             <button class="tough" onclick="pokemonTough()">Football</button>
         </div>  
         <div class="quiz-questions hide">
-            <h3>Do you like warm or cold?</h3>
+            <h2>Do you perfer cold or warm weather?</h2>
             <button class="beach" onclick="pokemonBeach()">Warm</button>
             <button class="cold" onclick="pokemonCold()">Cold</button>
         </div>
 
         <div class="quiz-questions hide">
-            <h3>Do you prefer the beach, space, mountains or the clouds?</h3>
+            <h2>Which of the following locations make you feel most at ease?</h2>
             <button class="beach" onclick="pokemonBeach()">Beach</button>
             <button class="cold" onclick="pokemonCold()">Space</button>
             <button class="beach" onclick="pokemonBeach()">Mountains</button>
@@ -42,7 +46,7 @@
         </div>
 
         <div class="quiz-questions hide">
-            <h3>Which of the following Pokemon do you relate to?</h3>
+            <h2>Which of the following Pokemon do you relate to most?</h2>
             <button class="beach" onclick="pokemonTough()">Snorlax</button>
             <button class="cold" onclick="pokemonFlex()">Jigglypuff</button>
             <button class="beach" onclick="pokemonBeach()">Pikachu</button>
@@ -50,7 +54,7 @@
         </div>
 
         <div class="quiz-questions hide">
-            <h3>do you prefer action movies or drama movies?</h3>
+            <h2>Would you rather watch an action or drama movie?</h2>
             <button class="tough" onclick="pokemonTough();getGif();getSprites();hideLoad()">Action moves</button>
             <button class="flex" onclick="pokemonFlex();getGif();getSprites();hideLoad()">Drama Movies</button>
         </div>
@@ -58,19 +62,18 @@
 
 
     <section class="loading hide">
-   
-   
+
             <div class="insert-gif">
                 <img src="" alt="" class="moving-gif loader">
             </div>
-        </br>
-            <p id="time">"Your pokemon team is being generated, Please enjoy this GIF.</p>
+            </br>
+            <h2 id="loading-text">Generating your team... for now enjoy this GIF!</h2>
 
     </section>
 
     <section id="results" class="quiz-questions center hide">
         <!-- background image -->
-        <h3>Your Pokemon Team</h3>
+        <p class="title-team">Your Pokemon Team</p>
         <div class="team-results">
 
             <div>
