--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section id="start-screen" class ="center">
         <div class="start-section">
             <div class="vertical-center">
-                <h2><img src="./assets/poketeams logo.png" alt="PokeTeams logo"></h2>
+                <h2><img src="./project-1/assets/generatedtext.png" alt="PokeTeams logo"></h2>
                 <h1>Press "Start" for your Pokemon Dream Team!</h1>
                 <button class="start-button">Start</button>
             </div>
